create card and fetch cards, project styling

--- a/client/index.html
+++ b/client/index.html
@@ -8,7 +8,7 @@
         <meta name="keywords" content="" />
         <meta name="author" content="Margus Liinev" />
         <script type="module" src="/src/main.tsx"></script>
-        <title>Default Starter</title>
+        <title>Flash Cards</title>
     </head>
     <body>
         <div id="root"></div>
